repair模块引入naocs依赖,解决getway模块缺失mysql依赖启动失败